2007-12-18  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (LoadNestedProjects): Handle empty section.

2007-12-17  Ankit Jain  <jankit@novell.com>

	Fix bug #349099.
	* CSharpResourceIdBuilder.cs:
	* VBNetResourceIdBuilder.cs: Allow both class and struct.

2007-12-17  Ankit Jain  <jankit@novell.com>

	* Minor fixes like use String.Empty instead of "" etc.

2007-12-14  Ankit Jain  <jankit@novell.com>

	* MSBuildFileFormat.cs: Use monitor's Begin/EndTask.
	* SlnFileFormat.cs: Likewise.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MdPrjHelper.cs, DefaultMSBuildProjectExtension.cs, MSBuildFileFormat.cs:
	  Fix warnings.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* prj2make-sharp-lib.addin.xml: Bump add-in versions.

2007-12-11  Ankit Jain  <jankit@novell.com>

	* DefaultMSBuildProjectExtension.cs: Improve error message.

2007-12-11  Ankit Jain  <jankit@novell.com>

	Fix bug #324333.
	* SlnFileFormat.cs (SolutionFolder): New.
	(LoadSolution): Use the new SolutionFolder class for solution folders.

2007-12-07  Ankit Jain  <jankit@novell.com>

	Fix bug #341643.
	* DefaultMSBuildProjectExtension.cs: Set DeployProperties.UseProjectRelativePath
	for all deploy files.
	* MSBuildFileFormat.cs (HandleFilePropertyChanged): Set "CopyToOutputDirectory"
	if build action changed to FileCopy.
	* Makefile.am:
	* prj2make-sharp-lib.mdp: Add reference to MonoDevelop.Deployment project.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* prj2make-sharp-lib.addin.xml, Makefile.am, prj2make-sharp-lib.mdp:
	  Directory reorganization.

2007-11-24  David Makovský (Yakeen) <yakeen@sanyas-on.net> 

	* MSBuildProjectServiceExtension.cs: corected translatable string to
	  support plural forms.	

2007-11-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MsPrjHelper.cs: Fix build. EnableViewState is not used anymore.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* DefaultMSBuildProjectExtension.cs, SlnFileFormat.cs, pkgconfiginvoker.cs,